<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/profile_edit_relativeLayout3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/rectangle_border"
        app:layout_constraintStart_toEndOf="@+id/profile_edit_relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_heightTitle">

        <Spinner
            android:id="@+id/profile_edit_inchesSpinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/profile_edit_warningText"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:background="@drawable/warning_bg_rounded"
        android:gravity="center"
        android:text="Warning!"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_profilePictureView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_edit_profilePictureView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/blank_profile"
        app:civ_border_color="#4D4E4E"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profile_edit_selectImgBtn"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/circle_button"
        android:contentDescription="Select Profile Image Button"
        app:layout_constraintBottom_toBottomOf="@+id/profile_edit_profilePictureView"
        app:layout_constraintEnd_toEndOf="@+id/profile_edit_profilePictureView"
        app:srcCompat="@drawable/camera_icon"
        app:tint="#EAE9E9"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/profile_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Edit Profile"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_edit_firstNameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_profilePictureView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_edit_lastNameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_profilePictureView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_edit_weightInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_lastNameInput"
        app:suffixText="lb">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Weight"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/profile_edit_birthdayButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="01/01/2000"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_birthdayTitle" />

    <Button
        android:id="@+id/profile_edit_saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Save Changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_relativeLayout" />

    <TextView
        android:id="@+id/profile_edit_birthdayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="30dp"
        android:text="Birthday"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_weightInput" />

    <ImageView
        android:id="@+id/profile_edit_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="5dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_edit_birthdayButton"
        app:layout_constraintTop_toTopOf="@+id/profile_edit_birthdayButton"
        app:srcCompat="@drawable/calendar_icon"
        app:tint="#FFFFFF" />

    <RelativeLayout
        android:id="@+id/profile_edit_relativeLayout"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_preferredPosTitle">

        <Spinner
            android:id="@+id/profile_edit_positionSpinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_edit_relativeLayout2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/rectangle_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_heightTitle">

        <Spinner
            android:id="@+id/profile_edit_feetSpinner"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/profile_edit_preferredPosTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="30dp"
        android:text="Preferred Position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_birthdayButton" />

    <TextView
        android:id="@+id/profile_edit_heightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="Height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_firstNameInput" />

    <Button
        android:id="@+id/profile_edit_cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#707070"
        android:text="Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_saveBtn" />

    <ProgressBar
        android:id="@+id/profile_edit_progressCircle"
        style="?android:attr/progressBarStyle"
        android:layout_width="146dp"
        android:layout_height="122dp"
        android:elevation="101dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <View
        android:id="@+id/profile_edit_progressBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".6"
        android:background="#4E4C4C"
        android:elevation="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>