...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="810dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="Scrollbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
...
                android:layout_marginStart="18dp"
                android:layout_marginTop="14dp"
                android:text="Friends: 0"
                android:textColor="#252525"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile_editProfileBtn" />

            <View
                android:id="@+id/profile_extraSpaceBg"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="#FFFFFF"
...
            <ImageButton
                android:id="@+id/profile_editProfileBtn"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#6200ED"
                android:contentDescription="Edit Profile Button"
                android:scaleType="fitCenter"
                android:src="@drawable/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_profilePictureView"
                app:tint="#FFFFFF" />

...
        android:id="@+id/profile_profilePageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Profile Page Button"
        android:scaleType="fitCenter"
        app:tint="#6558F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_teamPageButton"
        app:srcCompat="@drawable/ic_profile" />

...
